<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="text_appName" translatable="false">Share Cloud</string>
    <string name="app_name">Share Cloud</string>
    <string name="home_title">Fast file sharing\nwithout Internet</string>
    <string name="home_desc">Securely send videos, apps,\nmusics, photos and more\nto nearby friends</string>
    <string name="home_send">Send</string>
    <string name="home_receive">Receive</string>
    <string name="text_home">Home</string>
    <string name="text_Share">Share</string>
    <string name="text_Browser">Browser</string>
    <string name="text_Premium">Premium</string>
    <string name="text_photo">Photo</string>
    <string name="mode_middleDot" translatable="false"> · </string>
    <string name="text_listEmpty">No items</string>
    <string name="text_image">Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_file_transfer">Share Cloud</string>
    <string name="text_slide_menu">text_slide_menu</string>
    <string name="text_notification_icon">notify user for updateds</string>
    <string name="text_back_arrow_icon">text_back_arrow_icon</string>
    <string name="text_user_icon">user icon image</string>
    <string name="faizan_ali">Faizan Ali</string>
    <string name="sample_username">A</string>
    <string name="text_history">History</string>
    <string name="text_help">Help Friends free up space</string>
    <string name="text_settings">Settings</string>
    <string name="text_feedback">Help and Feedback</string>
    <string name="txt_feedback">Feedback</string>
    <string name="text_rate">Rate us</string>
    <string name="text_privacy">Privacy Policy</string>
    <string name="text_about">About</string>
    <string name="title_activity_settings">Settings</string>
    <string name="other_settings_text">OTHER SETTINGS</string>
    <string name="search_history_text_settings">search history</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_content_sharing">Share Cloud</string>
    <string name="text_files">Files</string>
    <string name="text_video">Video</string>
    <string name="text_application">Apps</string>
    <string name="item_text_app_icon">item_app_icon</string>
    <string name="tick_text">tick_text</string>
    <string name="item_app_demo_text">App Demo Text</string>
    <string name="app_size_item_text">21MB</string>
    <string name="audio_icon">audio_icon</string>
    <string name="text_groupByNothing">Nothing</string>
    <string name="text_groupByDate">Date</string>
    <string name="text_groupByAlbum">Album</string>
    <string name="text_groupByArtist">Artist</string>
    <string name="text_groupByFolder">Folder</string>
    <string name="butn_groupBy">Group by</string>
    <string name="butn_show">Show</string>
    <string name="butn_open">Open</string>
    <string name="text_emptySymbol">-</string>
    <string name="text_listEmptyImage">No photos here</string>
    <string name="mesg_newFilesReceived">New files have been received</string>
    <string name="mesg_fileReceived">%s has been received</string>
    <string name="mesg_errorReadFolder">Can not access \"%s\"</string>
    <string name="butn_mountDirectory">Mount folder</string>
    <string name="mesg_mountDirectoryHelp">Select the folder you want to access</string>
    <string name="butn_ejectDirectory">Unmount folder</string>
    <string name="butn_changeSavePath">Change save path</string>
    <string name="butn_removeShortcut">Remove shortcut</string>
    <string name="butn_copyHere">Copy here</string>
    <string name="butn_rename">Rename</string>
    <string name="butn_delete">Delete</string>
    <string name="text_storagePath">Storage path</string>
    <string name="text_storagePathSummary">New files will be saved to this folder</string>
    <string name="mesg_pathUnavailable">%s currently unavailable</string>
    <string name="butn_gotIt">Got it</string>
    <string name="text_listEmptyFiles">No files here</string>
    <string name="mesg_somethingWentWrong">Something went wrong</string>
    <string name="butn_addShortcut">Add shortcut</string>
    <string name="mesg_removed">Removed</string>
    <string name="mesg_added">Added</string>
    <string name="mesg_helpFolderSelection">To select a folder, tap its icon</string>
    <string name="text_createFolder">Create folder</string>
    <string name="butn_close">Close</string>
    <string name="text_renameMultipleItems">Rename multiple items</string>
    <string name="text_rename">Rename</string>
    <string name="text_folder">Folder</string>
    <string name="mesg_openFailure">Can not view \"%s\"</string>
    <string name="text_downloads">Downloads</string>
    <string name="text_documents">Documents</string>
    <string name="text_music">Music</string>
    <string name="text_fileRoot">File root</string>
    <string name="text_receivedFiles">Received files</string>
    <string name="text_sentFiles">Files Sent</string>
    <string name="text_storage">Storage</string>
    <string name="text_storage_devices">STORAGE DEVICES</string>
    <string name="text_internalStorage">Internal storage</string>
    <string name="text_emulatedMediaDirectory">Emulated (%s)</string>
    <string name="text_shortcuts">CATEGORIES</string>
    <string name="text_recentFiles">Recent files</string>
    <string name="text_pendingTransfers">Pending transfers</string>
    <string name="text_file">File</string>
    <string name="mesg_notValidTransfer">Transfer expired</string>
    <string name="text_shortcut">Shortcut</string>
    <string name="text_deleteConfirm">Confirm deletion</string>
    <string name="butn_cancel">Cancel</string>
    <string name="text_deletingFilesOngoing">Deleting selected files</string>
    <string name="text_fileExplorer">File explorer</string>
    <string name="mesg_currentPathUnavailable">This folder cannot be used </string>
    <string name="butn_create">Create</string>
    <string name="mesg_folderCreateError">Folder could not be created</string>
    <string name="text_qrCodeHotspotDisabledHelp">Set up a hotspot so that others can connect to you</string>
    <string name="text_hotspotStartedExternallyNotice">The hotspot was started externally. Turn off Hotspot </string>
    <string name="butn_stopHotspot">Stop hotspot</string>
    <string name="butn_shareWithTrebleshot">Share with Share Cloud</string>
    <string name="butn_shareWithOtherApps">Share with other apps</string>
    <string name="mesg_removing">Removing… May take long</string>
    <string name="text_receive" translatable="false">@string/butn_receive</string>
    <string name="butn_receive">Receive</string>
    <string name="text_listEmptyApp">No apps here</string>
    <string name="butn_showSystemApps">Show system apps</string>
    <string name="butn_help">Help</string>
    <string name="text_noNetworkAvailable">No network available</string>
    <string name="text_availableNetworks">Choose network - %s</string>
    <string name="text_manageDevices">Manage devices</string>
    <string name="butn_settings">Settings</string>
    <string name="butn_ask">Ask</string>
    <string name="butn_reject">Reject</string>
    <string name="butn_allow">Allow</string>
    <string name="butn_deny">Deny</string>
    <string name="mesg_hotspotCreatedInfo">Connect to \"%s\" in \"Wi-Fi settings\" or send files via \"%s\" inside Share Cloud</string>
    <string name="text_interfaceWireless">Wi-Fi</string>
    <string name="text_interfaceWifiDirect">Wi-Fi Direct</string>
    <string name="text_interfaceBluetooth">Bluetooth</string>
    <string name="text_interfaceEthernet">Ethernet</string>
    <string name="text_interfaceVPN">VPN Server</string>
    <string name="text_interfaceUnknown">Unknown connection</string>
    <string name="text_flagPending">Pending</string>
    <string name="text_flagRunning">Running</string>
    <string name="text_flagInterrupted">Interrupted</string>
    <string name="text_flagResume">Resumed</string>
    <string name="text_taskCompleted">Task completed</string>
    <string name="text_flagRemoved">Removed</string>
    <string name="text_unknown">Unknown</string>
    <string name="mode_webShareAddress">http://%s:%d/</string>
    <string name="text_longAgo">Long ago</string>
    <string name="text_timeJustNow">Just now</string>
    <string name="text_yearCountShort">%d yr</string>
    <string name="text_monthCountShort">%d mth</string>
    <string name="text_dayCountShort">%d dy</string>
    <string name="text_hourCountShort">%d hr</string>
    <string name="text_minuteCountShort">%d min</string>
    <string name="text_secondCountShort">%d sec</string>
    <string name="mesg_noReceiverOrSender">You should add devices first</string>
    <string name="mesg_errorNotTrustZoneDevice">This device needs to be set as TrustZone device on the receiver device to do this operation.</string>
    <string name="mesg_notAllowed">You are not allowed</string>
    <string name="butn_donate">Help development</string>
    <string name="butn_pause">Pause</string>
    <string name="butn_retry">Retry</string>
    <string name="mesg_connectionFailure">Connection failed</string>
    <string name="mesg_communicating">Communicating</string>
    <string name="mesg_noPendingTransferObjectExists">No pending transfer left. To resume interrupted files, use \'Retry receiving\' option.</string>
    <string name="butn_retryReceiving">Retry receiving</string>
    <string name="mesg_notSavingToChosenLocation">Your desired folder is not accessible. Files will be saved to the default folder.
\n
\n%s</string>
    <string name="butn_saveAnyway">Save anyway</string>
    <string name="mesg_completing">Completing</string>
    <string name="butn_feedbackContact">Feedback &amp; contact</string>
    <string name="text_requestPermissionStorageSummary">This permission allows Share Cloud to read and write to your device\'s storage for receiving and sharing files.</string>
    <string name="text_requestPermissionStorage">Storage permission</string>
    <string name="text_requestPermissionReadPhoneState">Permission to read phone state</string>
    <string name="text_requestPermissionReadPhoneStateSummary">Share Cloud needs to access your device\'s serial number to create a long-term identity number, helping other devices recognize you</string>
    <string name="text_notAllowedHelp">Check if you are allowed on %1$s \n\nDevices &gt; %2$s &gt; Allow to connect &gt; (check it)</string>
    <string name="text_trebleshotHotspot">Share Cloud hotspot</string>
    <string name="butn_startHotspot">Set up hotspot</string>
    <string name="text_startHotspot" translatable="false">@string/butn_startHotspot</string>
    <string name="bluetooth_desc">Due to the restrictions of Android version, turning Bluetooth on make quick transfers between devices</string>
    <string name="wifi_desc">WLAN is used to connect to your friend and transfer</string>
    <string name="text_empty">(empty)</string>
    <string name="text_fileName">File name</string>
    <string name="text_fileSize">File size</string>
    <string name="text_fileMime">File type</string>
    <string name="text_fileStatus">File status</string>
    <string name="text_transactionDetails">Details</string>
    <string name="text_location">Location</string>
    <string name="text_receivedSize">Received size</string>
    <string name="butn_start">Start</string>
    <string name="privacy_policy">By proceeding you agree\nto Privacy Policy</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="text_remove_ads_desc">Share Cloud - File Transfer is supported by ads but now you can remove them!</string>
    <string name="text_btn_remove_now">Remove Now</string>
</resources>