<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/dp_18"
        android:paddingBottom="@dimen/dp_24"
        android:paddingStart="@dimen/dp_24"
        android:paddingEnd="@dimen/dp_14">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <TextView
                style="@style/TextAppearance.Primary.Big"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/margin_absolute_size"
                android:gravity="center|top|start"
                android:text="@string/text_transactionDetails" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/closeTransferDialog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="top"
                    android:scaleType="fitEnd"
                    android:paddingBottom="32dp"
                    android:layout_marginEnd="@dimen/dp_4"
                    app:srcCompat="@drawable/ic_cross_grey_24dp" />
            </LinearLayout>

        </LinearLayout>


        <TextView
            style="@style/TextAppearance.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fileName" />

        <TextView
            android:id="@+id/transfer_info_file_name"
            style="@style/TextAppearance.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="4" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            style="@style/TextAppearance.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fileSize" />

        <TextView
            android:id="@+id/transfer_info_file_size"
            style="@style/TextAppearance.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            style="@style/TextAppearance.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fileMime" />

        <TextView
            android:id="@+id/transfer_info_file_mime"
            style="@style/TextAppearance.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            style="@style/TextAppearance.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_fileStatus" />

        <TextView
            android:id="@+id/transfer_info_file_status"
            style="@style/TextAppearance.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_empty" />

        <LinearLayout
            android:id="@+id/transfer_info_incoming_details_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                style="@style/TextAppearance.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_receivedSize" />

            <TextView
                android:id="@+id/transfer_info_received_size"
                style="@style/TextAppearance.Secondary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_empty" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            style="@style/TextAppearance.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_location" />

        <TextView
            android:id="@+id/transfer_info_pseudo_location"
            style="@style/TextAppearance.Secondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="20"
            android:text="@string/text_empty" />
    </LinearLayout>
</ScrollView>
