<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/sharebanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:layout_weight="3"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ad_demo" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/text1"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center|top"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black_dominant"
        android:textSize="28sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:gravity="center|top"
        android:layout_gravity="center"
        android:text="@string/home_desc"
        android:textColor="@color/light_grey"
        android:textSize="16sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center|top"
        android:layout_gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2">


        <LinearLayout
            android:id="@+id/send_button"
            android:layout_width="@dimen/send_btn_width_size"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center|top"
            android:layout_marginEnd="@dimen/default_margin_size"
            android:background="@drawable/background_share_button_size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/send_img_size"
                android:layout_height="@dimen/send_img_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding_borderless_button"
                android:contentDescription="@string/home_send"
                app:srcCompat="@drawable/ic_send_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_margin_size"
                android:text="@string/home_send"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/receive_button"
            android:layout_width="@dimen/receive_btn_width_size"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center|top"
            android:layout_marginEnd="@dimen/default_margin_size"
            android:background="@drawable/background_share_button_size"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/send_img_size"
                android:layout_height="@dimen/send_img_size"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/padding_borderless_button"
                android:contentDescription="@string/home_receive"
                app:srcCompat="@drawable/ic_receive_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/default_margin_size"
                android:text="@string/home_receive"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
