<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_gdp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <ImageView
        android:id="@+id/appIcon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="@dimen/margin_smallest_size"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/appname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_start_app_icon_124dp" />

    <TextView
        android:id="@+id/appname"
        style="@style/TextAppearance.Primary.Big.Splash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40" />

    <View
        android:id="@+id/startbutton"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/background_splash_button"
        android:layout_marginBottom="@dimen/margin_smallest_size"
        app:layout_constraintBottom_toTopOf="@+id/privacytext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/butn_start"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="@+id/startbutton"
        app:layout_constraintEnd_toEndOf="@+id/startbutton"
        app:layout_constraintStart_toStartOf="@+id/startbutton"
        app:layout_constraintTop_toTopOf="@+id/startbutton" />

    <TextView
        android:id="@+id/privacytext"
        style="@style/TextAppearance.Secondary.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_policy"
        android:textAlignment="center"
        android:textColor="@color/black_gray"
        android:layout_marginBottom="@dimen/margin_medium_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
