<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/remove_ads_dialogue_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/remove_ads_dialogue_background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/remove_ads"
            android:textColor="#de3b3b"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/iv_icon_remove"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <ImageView
            android:id="@+id/iv_icon_remove"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@+id/tv_desc_remove"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            android:src="@drawable/background_remove_ads_img" />

        <TextView
            android:id="@+id/tv_desc_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:paddingHorizontal="10dp"
            android:text="@string/text_remove_ads_desc"
            android:textColor="@color/grey"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_remove"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon_remove" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/Widget.Hazel.ButtonStyle.Custom"
            android:id="@+id/btn_remove"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="25dp"
            android:background="@drawable/background_positive_button"
            android:text="@string/text_btn_remove_now"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc_remove" />


        <ImageView
            android:id="@+id/iv_close_remove_ads"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="17dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_cross_grey_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>